force-app/main/default/objects/System_Outage_Summary__c/System_Outage_Summary__c.object-meta.xml
<CustomObject>
    <description>Object to store the Total Outage Time for each of the subsystem outages to help in reporting</description>
    <label>System Outage Summary</label>
    <nameField>
        <displayFormat>OutageSummary-{00000}</displayFormat>
        <label>System Outage Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Outage Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>