force-app/main/default/objects/System_Outage_Summary__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>End time of the outage</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>