force-app/main/default/objects/System_Outage_Summary__c/fields/Outage_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Outage_Time_Hours__c</fullName>
    <description>Total Outage Time given in hours. Used for reporting purposes.</description>
    <formula>(End_Time__c - Start_Time__c ) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outage Time (Hours)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>