force-app/main/default/objects/System_Outage_Summary__c/fields/Outage_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Outage_Time_Minutes__c</fullName>
    <description>Total Outage Time given in minutes. Used for reporting purposes.</description>
    <formula>(End_Time__c - Start_Time__c) * 24 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outage Time (Minutes)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>