force-app/main/default/objects/System_Outage_Summary__c/fields/Outage_Type__c.field-meta.xml
<CustomField>
    <fullName>Outage_Type__c</fullName>
    <description>Outage type for the system</description>
    <label>Outage Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>