force-app/main/default/objects/System_Outage_Summary__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Start time for the outage</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>