force-app/main/default/objects/System_Outage_Summary__c/fields/Subsystem_Name__c.field-meta.xml
<CustomField>
    <fullName>Subsystem_Name__c</fullName>
    <formula>System_Outage_Line__r.System_Outage_Header__r.Subsystem_Lookup__r.System_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subsystem Name</label>
    <type>Text</type>
</CustomField>