force-app/main/default/objects/System_Outage_Summary__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>System that is affected by the outage</description>
    <label>System</label>
    <referenceTo>System_Master__c</referenceTo>
    <relationshipLabel>System Outage Summary</relationshipLabel>
    <relationshipName>System_Outage_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>