force-app/main/default/objects/System_Outage_Summary__c/fields/System_Name__c.field-meta.xml
<CustomField>
    <fullName>System_Name__c</fullName>
    <formula>IF(OR(ISBLANK(System_Outage_Line__c),ISNULL(System_Outage_Line__c)) , System_Outage__r.System_Lookup__r.System_Name__c, System_Outage_Line__r.System_Outage_Header__r.System_Lookup__r.System_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Name</label>
    <type>Text</type>
</CustomField>