force-app/main/default/objects/System_Outage_Summary__c/fields/System_Outage__c.field-meta.xml
<CustomField>
    <fullName>System_Outage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>System Outage</label>
    <referenceTo>System_Outage__c</referenceTo>
    <relationshipLabel>System Outage Summary</relationshipLabel>
    <relationshipName>System_Outage_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>