force-app/main/default/objects/System_Outage_Summary__c/fields/System_Outage_Line__c.field-meta.xml
<CustomField>
    <fullName>System_Outage_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to System Outage Line to know the dependency line for which Total Outage time needs to be calculated</description>
    <label>System Outage Line</label>
    <referenceTo>System_Outage_Line__c</referenceTo>
    <relationshipLabel>System Outage Summary</relationshipLabel>
    <relationshipName>System_Outage_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>