force-app/main/default/objects/System_Outage_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>System_Outage_Line__c</columns>
    <columns>Outage_Type__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>