force-app/main/default/objects/System_Outage_Summary__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Outage_Type__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>System__c</columns>
    <columns>System_Name__c</columns>
    <columns>Subsystem_Name__c</columns>
    <columns>System_Outage_Line__c</columns>
    <columns>Outage_Time_Hours__c</columns>
    <columns>Outage_Time_Minutes__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>